* updated Groovy license/notice file * updated internal license DB and XLT NOTICE.md file * moved feature doc file to doc directory * updated Groovy to latest version 5.0.6 * cleaned up and formatted code and javadoc a little